Refactor API and database structure for B2C migration
- Removed team-related functionality from memories, user, and payment APIs.
- Updated memory handling to be user-scoped instead of team-scoped.
- Introduced local development memory storage for fallback during API failures.
- Simplified user retrieval to exclude team information.
- Adjusted Stripe checkout and customer portal actions to redirect to pricing.
- Cleaned up database schema by dropping team-related tables and foreign keys.
- Added scripts for seeding and resetting memories for local development.
- Introduced dev-memories.json for local memory storage and testing.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "next start",
     "db:setup": "npx tsx lib/db/setup.ts",
     "db:seed": "npx tsx lib/db/seed.ts",
+  "db:reset-seed": "npx tsx scripts/reset-and-seed.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "dev:seed": "npx tsx scripts/dev-seed.ts",
+    "dev:mem-test": "npx tsx scripts/dev-memories-test.ts"
   },
   "dependencies": {
     "@tailwindcss/postcss": "4.1.7",
