--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "version": 2,
-  "build": {
-    "env": {},
-    "outputDirectory": ".next"
-  },
-  "framework": {
-    "name": "nextjs"
-  }
+  "outputDirectory": ".next",
+  "framework": "nextjs"
 }
