--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^22.15.18",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -35,10 +36,10 @@
     "radix-ui": "^1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^4.11.0",
     "server-only": "^0.0.1",
     "stripe": "^18.1.0",
     "swr": "^2.3.3",
-    "react-icons": "^4.11.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "4.1.7",
     "tw-animate-css": "^1.3.0",
