--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev:mem-test": "npx tsx scripts/dev-memories-test.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@tailwindcss/postcss": "4.1.7",
     "@types/node": "^22.15.18",
     "@types/react": "19.1.4",
