--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "dev:seed": "npx tsx scripts/dev-seed.ts",
-    "dev:mem-test": "npx tsx scripts/dev-memories-test.ts"
+    "dev:seed": "npx tsx scripts/dev-seed.ts"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
